Moved script to HTML head, revised return values for playRound function

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <head lang="en">
     <title>Rock, Paper, Scissors!</title>
     <meta charset="UTF-8">
+    <script src="script.js"></script>
 </head>
 
 <body>
     <h1>Rock, Paper, Scissors!</h1>
-    <script src="script.js">
-    </script>
 </body>
