Added stylesheet, added prompt for player input

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <head lang="en">
     <title>Rock, Paper, Scissors!</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 
 <body>
     <h1>Rock, Paper, Scissors!</h1>
+    <div class="img-container">
+        <img href="images/rock.jpeg">
+        <img href="images/paper.jpeg">
+        <img href="images/scissors.jpeg">
+    </div>
 </body>
