Modified existing functions, added working game function (First full working commit)

--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@
 
 <body>
     <h1>Rock, Paper, Scissors!</h1>
+    <h2>Final score after five rounds determintes the winner! Open the browser console (Ctrl-Shift-I) to view the results of each round as you play.</h2>
 </body>
