Added images to page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 
 <body>
     <h1>Rock, Paper, Scissors!</h1>
+    <div class="img-container">
+        <img src="images/rock.jpeg">
+        <img src="images/paper.jpeg">
+        <img src="images/scissors.jpeg">
+    </div>
     <h2>Final score after five rounds determintes the winner! Open the browser console (Ctrl-Shift-I) to view the results of each round as you play.</h2>
 </body>
