Modified HTML to run script after page loads

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <title>Rock, Paper, Scissors!</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
-<body>
+<body onload>
     <h1>Rock, Paper, Scissors!</h1>
     <div class="img-container">
         <img src="images/rock.jpeg">
@@ -14,4 +13,5 @@
         <img src="images/scissors.jpeg">
     </div>
     <h2>Final score after five rounds determintes the winner! Open the browser console (Ctrl-Shift-I) to view the results of each round as you play.</h2>
+    <script src="script.js"></script>
 </body>
