Modified HTML with script defer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Rock, Paper, Scissors!</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body onload>
@@ -13,5 +14,4 @@
         <img src="images/scissors.jpeg">
     </div>
     <h2>Final score after five rounds determintes the winner! Open the browser console (Ctrl-Shift-I) to view the results of each round as you play.</h2>
-    <script src="script.js"></script>
 </body>
