--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
         <img src="images/paper.jpeg">
         <img src="images/scissors.jpeg">
     </div>
+    <div class="btn-container">
+        <button id="rock-btn">Rock</button>
+        <button id="paper-btn">Paper</button>
+        <button id="scissors-btn">Scissors</button>
+    </div>
     <h2>Final score after five rounds determintes the winner! Open the browser console (Ctrl-Shift-I) to view the results of each round as you play.</h2>
 </body>
