--- a/index.html
+++ b/index.html
@@ -18,5 +18,21 @@
         <button id="paper-btn">Paper</button>
         <button id="scissors-btn">Scissors</button>
     </div>
-    <h2>Final score after five rounds determintes the winner! Open the browser console (Ctrl-Shift-I) to view the results of each round as you play.</h2>
+    <p>Click a button to begin! First to five points is the winner.</p>
+
+
+    <div id="scores-container">
+        <div class="playerscore-div">
+            <p>Your Score:</p>
+            <div id="player-points"></div>
+        </div>
+        <div class="compscore-div">
+            <p>Computer Score:</p>
+            <div id="computer-points"></div>
+        </div>
+    </div>
+
+    <p id="round-result"></p>
+
+    <p id="winner-announcement"></p>
 </body>
