Rearranged script, added try again, added reset to events

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body onload>
+<body>
     <h1>Rock, Paper, Scissors!</h1>
     <div class="img-container">
         <img src="images/rock.jpeg">
@@ -22,17 +22,23 @@
 
 
     <div id="scores-container">
+
         <div class="playerscore-div">
             <p>Your Score:</p>
             <div id="player-points"></div>
         </div>
+
         <div class="compscore-div">
             <p>Computer Score:</p>
             <div id="computer-points"></div>
         </div>
+
     </div>
 
     <p id="round-result"></p>
 
     <p id="winner-announcement"></p>
+
+    <p id="try-again"></p>
+
 </body>
