Moved instructions element, instructions disappear when game starts

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
         <button id="paper-btn">Paper</button>
         <button id="scissors-btn">Scissors</button>
     </div>
-    <p>Click a button to begin! First to five points is the winner.</p>
-
 
     <div id="scores-container">
 
         <div class="playerscore-div">
             <p>Your Score:</p>
-            <div id="player-points"></div>
+            <div id="player-points">0</div>
         </div>
 
         <div class="compscore-div">
             <p>Computer Score:</p>
-            <div id="computer-points"></div>
+            <div id="computer-points">0</div>
         </div>
 
     </div>
+
+    <p id="instructions">Click a button to begin! First to five points is the winner.</p>
 
     <p id="round-result"></p>
 
